# kate

./: .aiexclude  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  invoke.yaml  kate.code-workspace  ngrok.example.yml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
client/: .env.example  index.html  package.json
client/src/: App.css  main.tsx
client/src/components/: ConnectButton.tsx  DebugDisplay.css  DebugDisplay.tsx  StatusDisplay.tsx
client/src/providers/: RTVIProvider.tsx
diagrams/: architecture.excalidraw
spiders/: otl.py
spiders/data/otl/: faq.txt  otl.csv
src/kate/: __init__.py  __main__.py  bots.py  dependencies.py  processors.py  scripts.py  servers.py  tools.py
src/kate/clients/: index.html  kate.css
src/kate/clients/assets/: index-DHlGALg2.css  index-jfFMStH0.js
tasks/: __init__.py  apps.py  checks.py  cleans.py  clients.py  containers.py  packages.py  servers.py  spiders.py
