# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "kate"
version = "1.0.0"
description = "Kate ignites your browsing experience"
authors = [{ name = "fmind" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.115.6",
    "google-cloud-discoveryengine>=0.13.5",
    "loguru>=0.7.3",
    "pipecat-ai[daily,google,openai,silero]>=0.0.54",
    "uvicorn>=0.34.0",
]
license = { file = "LICENSE.txt" }
keywords = ["mlops", "python", "package"]

# LINKS

[project.urls]
Homepage = "https://github.com/fmind/kate"
Documentation = "https://fmind.github.io/kate/"
Repository = "https://github.com/fmind/kate"
"Bug Tracker" = "https://github.com/fmind/kate/issues"
Changelog = "https://github.com/fmind/kate/blob/main/CHANGELOG.md"

# SCRIPTS

[project.scripts]
kate = "kate.scripts:main"

# DEPENDENCIES

[dependency-groups]
checks = [
    "bandit>=1.8.0",
    "coverage>=7.6.8",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]
commits = ["commitizen>=4.0.0", "pre-commit>=4.0.1"]
dev = ["invoke>=2.2.0", "ipykernel>=6.29.5", "python-dotenv>=1.0.1"]
docs = ["pdoc>=15.0.0"]
spiders = ["scrapy>=2.12.0"]

# TOOLS

[tool.uv]
default-groups = ["checks", "commits", "dev", "docs", "spiders"]

[tool.bandit]
targets = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.mypy]
pretty = true
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbosity=2"
pythonpath = ["src"]

[tool.ruff]
fix = true
indent-width = 4
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103"]

# SYSTEMS

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
